--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-list": "^0.7.21",
     "react-onclickoutside": "^5.3.3",
     "react-responsive": "^1.1.4",
-    "redux-logger": "^2.6.1"
+    "redux-logger": "^2.6.1",
+    "xss": "^0.2.13"
   }
 }
